--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
           <!--<span id="greatyarmouth" class="d-none d-lg-block">
             The Great Wall<br>of<br>Yarmouth
           </span>-->
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/gycrest.png" alt="great yarmouth crest">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./img/gycrest.png" alt="great yarmouth crest">
           <!--<span id="greatyarmouth" class="d-none d-lg-block">
           Volume<br>I<br>Murage
           </span>-->
@@ -56,7 +56,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-xl-flex d-column" id="wall">
         <div class="my-auto col-12 col-xl-7">
-          <a href="#introduction"><img class="img-fluid mx-auto mb-2" src="img/book-cover.png" alt="book cover"></a>
+          <a href="#introduction"><img class="img-fluid mx-auto mb-2" src="./img/book-cover.png" alt="book cover"></a>
         </div>
         <div class="col-12 col-xl-5 mt-xl-5" id="front-text">
           <p>190 pages containing facts about the medieval wall of Yarmouth.</p>
@@ -81,23 +81,23 @@
         <div class="my-auto">
           <h2 class="mb-5">Take a Look Inside</h2>
             <p class="text-muted">*click an image to view full-size*</p>
-          <a href="img/northgatefull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/northgate.jpg" alt="book pages northgate">
+          <a href="./img/northgatefull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/northgate.jpg" alt="book pages northgate">
           </a>
-          <a href="img/chapterfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/chapter.jpg" alt="book pages chapter">
+          <a href="./img/chapterfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/chapter.jpg" alt="book pages chapter">
           </a>
-          <a href="img/cottonmapfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/cottonmap.jpg" alt="book pages cotton map">
+          <a href="./img/cottonmapfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/cottonmap.jpg" alt="book pages cotton map">
           </a>
-          <a href="img/moatfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/moat.jpg" alt="book pages moat">
+          <a href="./img/moatfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/moat.jpg" alt="book pages moat">
           </a>
-          <a href="img/marketfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/market.jpg" alt="book pages market">
+          <a href="./img/marketfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/market.jpg" alt="book pages market">
           </a>
-          <a href="img/kingsfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
-            <img src="img/kings.jpg" alt="book pages kings">
+          <a href="./img/kingsfull.jpg" data-toggle="lightbox" data-gallery="take-a-look">
+            <img src="./img/kings.jpg" alt="book pages kings">
           </a>
         </div>
       </section>
@@ -107,12 +107,12 @@
           <h2 class="mb-5">Buy the Book</h2>
             <div class="row">
 	          <div class="col-lg-6 my-auto">
-		        <img class="img-fluid mx-auto mb-2" src="img/book-cover.png" alt="book cover">
+		        <img class="img-fluid mx-auto mb-2" src="./img/book-cover.png" alt="book cover">
 	          </div>
 	          <div class="col-lg-6 my-auto">
 		        <h4>The Great Wall of Yarmouth</h4>
 		        <h5>Volume I - Murage</h5>	
-		        <p>£18.00 + delivery</p>
+		        <p>£19.95 + delivery</p>
 					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 						<input type="hidden" name="cmd" value="_s-xclick">
 						<input type="hidden" name="hosted_button_id" value="VUFMY5JXEDPK8">
